Begin navbar styling

--- a/common/themes/bootstrap/theme.conf
+++ b/common/themes/bootstrap/theme.conf
@@ -16,6 +16,9 @@ navbar_site_name = Site
 # in the form [(name, page), ..]
 navbar_links =
 
+# Navigation bar title. (Default: true)
+navbar_version =
+
 # Render the next and previous page links in navbar. (Default: true)
 navbar_sidebarrel = true
 
