--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "isShellCommand": true,
     "tasks": [
         {
-            "taskName": "build-main",
+            "taskName": "build-all",
             "args": [],
             "isBuildCommand": true,
             "isWatching": false        }
