Fix table of contents and compile warnings

--- a/common/themes/bootstrap/theme.conf
+++ b/common/themes/bootstrap/theme.conf
@@ -28,6 +28,8 @@ navbar_pagenav = true
 # Tab name for the current pages TOC. (Default: "Page")
 navbar_pagenav_name = Page
 
+site_home = "#"
+
 # Global TOC depth for "site" navbar tab. (Default: 1)
 # Switching to -1 shows all levels.
 globaltoc_depth = 1
