--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   ],
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.2",
     "gulp-shell": "^0.5.1",
+    "gulp-sourcemaps": "^1.6.0",
     "yargs": "^3.31.0"
   }
 }
