--- a/common/themes/dnn/theme.conf
+++ b/common/themes/dnn/theme.conf
@@ -9,24 +9,12 @@ pygments_style = tango
 # Navigation bar title. (Default: ``project`` value)
 navbar_title =
 
-# Tab name for entire site. (Default: "Site")
-navbar_site_name = Site
-
 # A list of tuples containting pages to link to.  The value should be
 # in the form [(name, page), ..]
 navbar_links =
 
 # Navigation bar title. (Default: true)
 navbar_version =
-
-# Render the next and previous page links in navbar. (Default: true)
-navbar_sidebarrel = true
-
-# Render the current pages TOC in the navbar. (Default: true)
-navbar_pagenav = true
-
-# Tab name for the current pages TOC. (Default: "Page")
-navbar_pagenav_name = Page
 
 site_home = "#"
 
@@ -43,10 +31,6 @@ globaltoc_depth = 1
 # Values: "true" (default) or "false"
 globaltoc_includehidden = true
 
-# HTML navbar class (Default: "navbar") to attach to <div> element.
-# For black navbar, do "navbar navbar-inverse"
-navbar_class = navbar
-
 # Fix navigation bar to top of page?
 # Values: "true" (default) or "false"
 navbar_fixed_top = true
@@ -55,12 +39,8 @@ navbar_fixed_top = true
 # Options are "nav" (default), "footer" or anything else to exclude.
 source_link_position = nav
 
-# Bootswatch (http://bootswatch.com/) theme.
-#
-# Options are nothing (default) or the name of a valid theme such as
-# "amelia" or "cosmo".
-bootswatch_theme =
-
-# Switch Bootstrap version?
-# Values: "3" (default) or "2"
-bootstrap_version = 3
+# Hide the sidebars on specific pages.
+# If sidebars are defined for the site, then they will not be displayed
+# on the pages defined in this list. The value should be a list of 
+# pagenames in the form [page1, page2, ..]
+hide_sidebar = []
