Copy editing updates

--- a/common/themes/dnn/theme.conf
+++ b/common/themes/dnn/theme.conf
@@ -44,3 +44,6 @@ source_link_position = nav
 # on the pages defined in this list. The value should be a list of 
 # pagenames in the form [page1, page2, ..]
 hide_sidebar = []
+
+# When generating paths, add the following root path.
+link_root = ''
